# SmartCRDT

./: .dockerignore  .env.chromadb.example  .env.docker.example  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  DOCKSIDE-EXAM.md  Dockerfile  Dockerfile.cli  Dockerfile.dev  LICENSE  README.md  SECURITY.md  docker-compose.chromadb.yml  docker-compose.fullstack.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  global.d.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  codeql-config.yml  dependabot.yml
.github/workflows/: benchmark-regression.yml  benchmark.yml  benchmarks-ci.yml  cd-enhanced.yml  ci.yml  codeql.yml  deploy.yml  docker.yml  pr-validation.yml  release.yml  security-scan.yml  smoke-tests.yml
.husky/: commit-msg  pre-commit  pre-push
benchmarks/: bench-crdt-merge.js  bench-hash.js  bench-vector-operations.js  hnsw_benchmark.ts
docker/: Dockerfile.base  Dockerfile.cli  Dockerfile.full  Dockerfile.optimized  Dockerfile.optimized.dev  build-all.sh  build.sh  clean.sh  docker-compose.example.yml  health-check.sh  push-all.sh  push.sh
docker/prometheus/: prometheus.yml
docs/: TROUBLESHOOTING.md
docs/adr/: 001-protocol-first-design.md  002-three-plane-separation.md  003-cascade-routing.md  004-intent-vectors-for-privacy.md  005-crdt-for-knowledge.md  006-redaction-addition-protocol.md  README.md
docs/api/: README.md  _index.md  cascade.md  config.md  core.md  embeddings.md  privacy.md  protocol.md  swarm.md  utils.md
docs/architecture/: cascade-architecture.md  data-flow.md  privacy-architecture.md  superinstance-architecture.md
examples/: QUICKSTART.md  README.md  cascade-basic-usage.ts  hardware-aware-dispatch.ts  package.json  privacy-first-bot.ts  semantic-caching.ts  superinstance-three-planes.ts  tsconfig.json
examples/a2ui/basic-ui-generation/: page.tsx
examples/a2ui/streaming-ui/: page.tsx
examples/aequor/privacy-preserving/: interactive-demo.html
examples/apps/analytics-app/: app-manifest.yaml
examples/archival-demo/: Cargo.toml  Makefile  archival-demo.c
examples/cartridge-basic/: index.ts
examples/cartridge-marketplace/: index.ts
examples/coagents-a2ui/: App.tsx  index.html  main.tsx
examples/code-assistant/: cli.js
examples/cognitive-assistant/: Cargo.toml  Makefile  cognitive-assistant.c
examples/cognitive-assistant/src/: main.rs
examples/collaboration/: CRDTDocumentStore.ts  CollaborationClient.ts  CollaborationServer.ts  ConflictDemo.ts  index.html  index.ts  serve.ts  server.ts  simple-demo-fixed.ts  simple-demo.ts  test.ts
examples/cost-savings/: index.ts  simple-demo.ts
examples/federated-learning/: index.ts
examples/hello-world/: demo-output.txt  index.ts  simple-demo.ts
examples/langgraph/: simple-demo.ts  vitest.config.ts
examples/log-analyzer/: Cargo.toml  Makefile  log-analyzer.c
examples/log-analyzer/src/: main.rs
examples/manifests/: cascade-router.yaml  native-rust-router.yaml  openai-embeddings.yaml  privacy-layer.yaml  semantic-cache.yaml
examples/marketplace-client/: index.ts
examples/minimal/: Cargo.toml  Makefile  minimal.c
examples/module-dev/: Cargo.toml  Makefile  build-module.sh  create-module.sh  register-module.sh  test-module.sh
examples/module-dev/src/: lib.rs
examples/offline-capable/: server.js
examples/privacy-mode/: index.ts  simple-demo.ts
examples/quantization/: usage-examples.ts
examples/quickstart/: code-context.ts  hello-world.ts  privacy.ts
examples/swarm-demo/: Cargo.toml  Makefile  run-swarm-demo.sh  swarm-node.c
examples/vector-search/: index.ts  simple-demo.ts
examples/wasm-browser/: index.html
examples/webgpu/: vitest.config.ts
message-in-a-bottle/from-fleet/: CONTEXT.md  PRIORITY.md
native/: .gitignore  Cargo.toml  build.js  build.sh
native/core/: Cargo.toml
native/core/src/: error.rs  lib.rs  memory.rs  result.rs  time.rs  types.rs
native/crdt/: Cargo.toml
native/crdt/benches/: bench_test.rs  crdt_ops.rs  simple_bench.rs
native/crdt/src/: gcounter.rs  lib.rs  merge.rs  orset.rs  pncounter.rs  register.rs
native/crypto/: Cargo.toml
native/crypto/src/: encrypt.rs  hash.rs  kdf.rs  lib.rs  random.rs
native/embeddings/: Cargo.toml  libhnsw.rlib
native/embeddings/benches/: quantization.rs
native/embeddings/src/: cache.rs  hnsw.rs  lib.rs  ops.rs  quantization.rs  search.rs  similarity.rs
native/ffi/: Cargo.toml  build.rs
native/ffi/src/: cache.rs  crdt.rs  crypto.rs  embeddings.rs  hnsw.ts  lib.rs  utils.rs
native/python/: Cargo.toml  build.sh
native/python/src/: lib.rs
native/wasm/: Cargo.toml  build-release.sh  build.sh
native/wasm/src/: lib.rs  utils.rs
plato_core/: jepa_script_picker.py  test_jepa_script_picker.py
python/: pyproject.toml  setup.py
python/examples/: comprehensive_demo.py  crdt_sync.py  semantic_search.py  vector_cache.py
python/superinstance/: __init__.py  cache.py  crdt.py  crypto.py  embeddings.py
python/tests/: test_cache.py  test_crdt.py  test_crypto.py  test_embeddings.py
scripts/: backup-before-cleanup.sh  benchmark-all.js  benchmark.sh  cleanup-repo.sh  create-v1.0-tag.sh  generate-docs.cjs  generate-docs.js  generate-docs.sh  generate-docs.ts  generate-performance-report.js  migrate-to-chromadb.ts  release.js  security-audit.ts  setup-monitoring.sh  test-chromadb.sh  verify-benchmark-setup.js  verify-release-readiness.sh  vljepa-train.mjs
scripts/git/: feature.sh  hotfix.sh  release.sh
tests/: Cargo.toml  integration_test.rs
tests/common/: mod.rs
tests/fixtures/: mod.rs  sample_embeddings.rs  sample_wasm.rs
tools/activelog-debug/: Cargo.toml
tools/activelog-debug/src/: main.rs
tools/activelog-inspect/: Cargo.toml
tools/activelog-inspect/src/: main.rs
tools/activelog-profile/: Cargo.toml
tools/activelog-profile/src/: main.rs
tools/activelog-sim/: Cargo.toml
tools/activelog-sim/src/: main.rs
tools/activelog-validate/: Cargo.toml
tools/activelog-validate/src/: main.rs
(+237 files in other folders)
