[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "superinstance"
version = "0.1.0"
description = "High-performance native modules for AI applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["AI", "machine learning", "embeddings", "CRDT", "crypto", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
openai = [
    "openai>=1.0",
]
all = [
    "superinstance[dev,openai]",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/SmartCRDT"
Documentation = "https://github.com/SuperInstance/SmartCRDT/tree/main/python"
Repository = "https://github.com/SuperInstance/SmartCRDT"
Issues = "https://github.com/SuperInstance/SmartCRDT/issues"

[tool.maturin]
python-source = "python"
module-name = "superinstance.superinstance"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["superinstance/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
