[package]
name = "activelog-log-analyzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
activelog = { path = "../../packages/activelog" }
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
