[package]
name = "superinstance-native-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Cryptographic primitives for SuperInstance (hashing, encryption)"

[dependencies]
superinstance-native-core = { path = "../core" }

sha2.workspace = true
blake3.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize = "1.7"
rand = "0.8"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

# [[bench]]
# name = "hashing"
# harness = false
