[package]
name = "superinstance-wasm"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance Contributors"]
license = "MIT"
repository = "https://github.com/SuperInstance/SmartCRDT"
description = "WebAssembly bindings for SuperInstance native modules"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Local dependencies (use hyphens in Cargo.toml)
superinstance-native-embeddings = { path = "../embeddings" }
superinstance-native-crdt = { path = "../crdt" }
superinstance-native-core = { path = "../core" }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.wee_alloc]
version = "0.4"
optional = true

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
