[package]
name = "activelog-debug"
version = "0.1.0"
edition = "2021"
authors = ["ActiveLog Team"]
description = "Interactive debugger for ActiveLog cognitive flows"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
console = "0.15"
dialoguer = "0.11"
colored = "2.1"

[[bin]]
name = "activelog-debug"
path = "src/main.rs"
