[package]
name = "activelog-inspect"
version = "0.1.0"
edition = "2021"
authors = ["ActiveLog Team"]
description = "Inspection tool for ActiveLog internals"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
tabled = "0.15"
colored = "2.1"
printpdf = "0.6"

[[bin]]
name = "activelog-inspect"
path = "src/main.rs"
