[package]
name = "activelog-profile"
version = "0.1.0"
edition = "2021"
authors = ["ActiveLog Team"]
description = "Profiler for ActiveLog with flame graph generation"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
plotters = "0.3"
indicatif = "0.17"
colored = "2.1"
inferno = "0.11"

[[bin]]
name = "activelog-profile"
path = "src/main.rs"
