[package]
name = "activelog-sim"
version = "0.1.0"
edition = "2021"
authors = ["ActiveLog Team"]
description = "Simulation tool for ActiveLog hardware and workloads"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
statrs = "0.16"
plotters = "0.3"
indicatif = "0.17"
colored = "2.1"
regex = "1.10"

[[bin]]
name = "activelog-sim"
path = "src/main.rs"
